# ld2410-ble

./: .all-contributorsrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: FUNDING.yml
.github/workflows/: ci.yml
docs/source/: conf.py  index.md  installation.md  usage.md
examples/: run.py
src/ld2410_ble/: __init__.py  const.py  exceptions.py  ld2410_ble.py  models.py
tests/: test_init.py
